# SoftRenderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Readme.md  application.drawio  main.cpp  testMath.cpp
application/: CMakeLists.txt  Image.cpp  Image.h  application.cpp  application.h  image.cpp  image.h
global/: base.h
gpu/: CMakeLists.txt  bufferObject.cpp  bufferObject.h  dataStructures.h  framebuffer.cpp  framebuffer.h  gpu.cpp  gpu.h  raster.cpp  raster.h  shader.cpp  shader.h  vao.cpp  vao.h
gpu/shader/: defaulthader.h  defaultshader.cpp  defaultshader.h
math/: math.h  mathFunction.h  mathFunctions.h  matrix.h  vector.h
